# plex-tpdb-scanner

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
metadata_tool/: __init__.py  api.py
provider/: __init__.py  config.py  main.py  models.py
provider/mappers/: __init__.py  tpdb_to_plex.py
provider/routes/: __init__.py  manifest.py  matches.py  metadata.py
provider/services/: __init__.py  match_service.py  metadata_service.py
tests/: test_metadata_routes.py  test_tpdb_enrichment.py
