[project]
name = "plex-tpdb-scanner"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "httpx2[http2]>=2.7.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
